--- a/config.conf
+++ b/config.conf
@@ -6,7 +6,7 @@ city1=泉州
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
 city2=三明
 # 在一起的日子，格式同上，暂不不支持农历
-love_date=2018-02-24
+love_day=2018-02-24
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
 birthday_lover=05-25
 #你的生日,注意格式只写*月*日 如："07-21"
